<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/item1"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/item2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/item2"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/item3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/item3"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/item4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/item4"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/item5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/item5"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/item6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/item6"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/item7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/item7"
            android:textSize="20sp"/>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>